fix menu z-index + convert vh to dvh

--- a/src/styles/components/headerRelated/menu.module.scss
+++ b/src/styles/components/headerRelated/menu.module.scss
@@ -1,10 +1,10 @@
 #menu {
 	position: fixed;
-	z-index: 2;
+	z-index: 1;
 	inset: 0;
 	display: grid;
 	place-items: center;
-	height: 100vh;
+	height: 100dvh;
 	background-color: var(--bright);
 	transform: translateX(100vw);
 	transition: transform 0.3s;
