--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,7 +18,7 @@ body,
 main {
 	margin: 0;
 	width: 100vw;
-	height: 100vh;
+	height: 100dvh;
 }
 
 body {
