--- a/src/styles/pages/index.module.scss
+++ b/src/styles/pages/index.module.scss
@@ -1,3 +1,5 @@
 #index-page {
+	position: relative;
+	z-index: 0;
 	color: var(--dark);
 }
